# cyberspacein

./: .gitignore  README.md
csi-back/: .env.example  API接口鉴权说明.md  Dockerfile  MIGRATION_PLAN.md  docker-compose.yaml  example.json  example_node.json  fields.csv  openapi.json  pyproject.toml  refactor-agent-parallel-sessions.md  requirements.txt  test.py  tmp_identity.txt  用户系统与鉴权改造详细方案.md
csi-back/.cursor/rules/: csi-backend.mdc  develop-test.mdc
csi-back/.cursor/skills/fastapi-expert/: SKILL.md
csi-back/.cursor/skills/generate-api-docs/: SKILL.md
csi-back/app/: main.py
csi-back/app/core/: config.py  exceptions.py  logging_config.py  permissions.py  permissions.yml  route_permissions.py  route_permissions.yml  security.py  system_config.py
csi-back/app/curd/: action.py
csi-back/app/db/: __init__.py  elasticsearch.py  mariadb.py  mongodb.py  rabbitmq.py  redis.py
csi-back/app/dependencies/: auth.py
csi-back/app/middleware/: response.py
csi-back/app/models/: __init__.py  action.py  annotation.py  search_template.py  system_config.py  wiki.py
csi-back/app/scheduler/: __init__.py  __main__.py
csi-back/app/schemas/: action.py  agent.py  annotation.py  article.py  constants.py  embedding.py  enum.py  forum.py  general.py  highlight.py  html_analyze.py  overview.py  platform.py  response.py  search.py  system_config.py  timeline.py  wiki.py
csi-back/app/service/: action.py  action_log.py  action_schedule.py  analyze.py  auth.py  auth_session.py  component.py  component_auth.py  html_analyze.py  ml_client.py  overview.py  permission_admin.py  sandbox.py  search.py  system_config_history.py
csi-back/app/utils/: agent.py  async_fetch.py  cos.py  date_time.py  dict_helper.py  embedding.py  embeddings.py  entity_entities.py  file_security.py  id_lib.py  jinja_injection.py  network.py  search.py  status_codes.py  workflow.py
csi-back/docs/: agent-runtime-api-frontend.md
csi-back/requirements/: requirements-dev.txt  requirements-prod.txt
csi-back/scripts/: cleanup_auth_data.py  enrich_wiki_seed.py
csi-back/tests/: conftest.py  test_cleanup_auth_data.py
csi-back/tests/analyst/: test_agent_service.py  test_analyst_hooks.py  test_analyst_service_build_bot.py  test_analyst_service_core.py  test_analyst_service_provider_selection.py  test_analyst_service_sse_broadcast.py  test_analyst_service_sse_debug.py  test_analyst_service_sse_replay.py  test_analyst_shutdown.py  test_analyst_tools.py  test_dual_session_isolation.py  test_entity_get_utils.py  test_entity_modify.py  test_hitl.py  test_network_security.py  test_parallel_session_cap.py  test_run_analysis_structured_result.py  test_search_entities_tool.py  test_send_message.py  test_session_service.py  test_skill_frontmatter.py  test_skill_upload_zip.py  test_submit_task_result_tool.py  test_system_prompt_service.py  test_use_skill_tool.py  test_web_runtime_proxy.py  test_wiki_apply.py  test_wiki_tools.py  test_workspace_service.py
csi-back/tests/api/: test_action_blueprint_endpoints.py  test_action_schedule_endpoints.py  test_agent_agents_endpoints.py  test_agent_configs_models_endpoints.py  test_agent_configs_prompts_endpoints.py  test_agent_message_endpoint.py  test_agent_misc_endpoints.py  test_agent_placeholder_removed.py  test_agent_prompts_brief_endpoints.py  test_agent_router_registration.py  test_agent_sandbox_endpoints.py  test_agent_sessions_endpoints.py  test_agent_start_approve_endpoints.py  test_agent_status_sse_endpoints.py  test_agent_system_prompts_endpoints.py  test_agent_workspaces_endpoints.py  test_api_router.py  test_article_forum_detail_entities.py  test_auth_endpoints.py  test_overview_endpoints.py  test_system_config_endpoints.py  test_wiki_endpoints.py
csi-back/tests/cleanup/: test_cleanup_regression.py
csi-back/tests/core/: test_config.py  test_exceptions.py  test_logging_config.py  test_permissions.py  test_security.py  test_system_config.py
csi-back/tests/db/: test_db_clients.py  test_db_close_safe.py  test_db_rabbitmq.py
csi-back/tests/dependencies/: test_auth_dependencies.py
csi-back/tests/middleware/: test_response_middleware.py
csi-back/tests/models/: test_models_construct.py  test_models_registry.py  test_nanobot_models.py
csi-back/tests/nanobot/: fakes.py  test_build_status.py  test_context_documents.py  test_document_parsing.py  test_truncate_text_shadowing.py
csi-back/tests/schemas/: test_agent_stop_reason_enum.py  test_schemas_annotation.py  test_schemas_auth.py  test_schemas_embedding.py  test_schemas_general.py  test_schemas_group_platform.py  test_schemas_overview.py  test_schemas_permission_code.py  test_schemas_response.py  test_schemas_search.py
csi-back/tests/service/: test_action_blueprint_snapshot.py  test_action_control.py  test_action_log.py  test_action_schedule.py  test_action_timeout.py  test_action_workflow.py  test_auth_session.py  test_component_auth.py  test_service_action_cache.py  test_service_auth.py  test_service_component.py  test_service_html_analyze.py  test_service_overview.py  test_service_sandbox.py  test_service_search.py  test_skill_admin.py  test_system_config_history.py
csi-back/tests/utils/: test_jinja_injection.py  test_utils_agent.py  test_utils_async_fetch.py  test_utils_cos.py  test_utils_date_time.py  test_utils_dict_helper.py  test_utils_embedding.py  test_utils_entity_entities.py  test_utils_file_security.py  test_utils_id_lib.py  test_utils_network.py  test_utils_search.py  test_utils_status_codes.py  test_utils_workflow.py
(+1556 files in other folders)
